--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1>Holis</h1>
     <h2>agregamos otro titulos</h2>
     <h3>tuki</h3>
+
+    <footer>
+        <p>Todos los derechos reservados. 2022</p>
+    </footer>
 </body>
 </html>
