--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav>
+        <img src="/ESCUDO-RIVER.jpg" alt="River">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
